--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
+    <!-- Service Worker Registrierung für PWA Support -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(reg => console.log('SW registriert!', reg))
+            .catch(err => console.log('SW Fehler:', err));
+        });
+      }
+    </script>
   </body>
 </html>
