Bug fixes and PWA optimization

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OGNIB - Cards Dealer</title>
+    <meta name="description" content="Bingo Link Sharing für Friends" />
+    <meta name="theme-color" content="#7c3aed" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
     <!-- Wichtig für die Share-Funktion: -->
     <link rel="manifest" href="/manifest.json" />
   </head>
